# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: linter.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
page_analyzer/: __init__.py  app.py  db.py  db_manager.py  page_checker.py  parser.py  routes.py  url_utils.py  validators.py
page_analyzer/templates/: base.html  index.html  url_details.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  messages.html  nav.html
page_analyzer/templates/urls/: detail.html  details.html  list.html
