[project]
authors = [
    {name = "Rustem Yeldessov", email = "eldesov1997@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
dependencies = [
    "flask",
    "python-dotenv",
    "gunicorn",
    "psycopg2-binary>=2.9.9,<3.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
